--- a/html/lotr.html
+++ b/html/lotr.html
@@ -19,7 +19,7 @@ Section 001
             <a href="#">Lord of the Rings</a> |
             <a href="vball.html">Volleyball</a> |
             <a href="webapp.html">Jumpy Square</a> |
-            <a href="https://imatty28980.github.io/finalwebsite/index.html" target="_blank">Professional Page</a>
+            <a href="https://imatty28980.github.io/IS201WebDev/" target="_blank">Professional Page</a>
         </span>
         
     </div>
