--- a/html/webapp.html
+++ b/html/webapp.html
@@ -5,7 +5,7 @@
         <a href="lotr.html">Lord of the Rings</a> |
         <a href="vball.html">Volleyball</a> |
         <a href="#">Jumpy Square</a> |
-        <a href="https://imatty28980.github.io/finalwebsite/index.html" target="_blank">Professional Page</a>
+        <a href="https://imatty28980.github.io/IS201WebDev/" target="_blank">Professional Page</a>
         <link rel="stylesheet" href="../styles/styles.css"
         <br><br>
     </body>
