--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <h1 class="center cool"><span class="big">Interests of Ian Matthews</span></h1>
 
     <h2>
-        <a href="https://imatty28980.github.io/finalwebsite/index.html" target="_blank">Link to Professional Website</a>
+        <a href="https://imatty28980.github.io/IS201WebDev/" target="_blank">Link to Professional Website</a>
     </h2>
     <p>
         See my  <a href="https://www.linkedin.com/in/ian-matthews-28b1462b1/" target="_blank" title="LinkedIn Profile for Ian Matthews">LinkedIn Page</a>
