--- a/html/vball.html
+++ b/html/vball.html
@@ -12,7 +12,7 @@
     <a href="lotr.html">Lord of the Rings</a> |
     <a href="#">Volleyball</a> |
     <a href="webapp.html">Jumpy Square</a> |
-    <a href="https://imatty28980.github.io/finalwebsite/index.html" target="_blank">Professional Page</a>
+    <a href="https://imatty28980.github.io/IS201WebDev/" target="_blank">Professional Page</a>
     <br><br>
     <h4 class="center cool">Volleyball</h4>
     <div class="center">
