--- a/index.html
+++ b/index.html
@@ -23,6 +23,6 @@
     <p>
         See my  <a href="https://www.linkedin.com/in/ian-matthews-28b1462b1/" target="_blank" title="LinkedIn Profile for Ian Matthews">LinkedIn Page</a>
     </p>
-    <div class="center"><img src="images/ian0.5.tiff" height="1000" alt="Ian Matthews 0.5"></div>>
+    <div class="center"><img src="images/carcool.png" height="1000" alt="Ian Matthews 0.5"></div>>
 </body>
 </html>
