--- a/html/vball.html
+++ b/html/vball.html
@@ -35,7 +35,7 @@
         </p> <br>
     </div>
     <div class="center">
-        <img src="../images/vball.tiff" height="300" alt="Volleyball picture">
+        <img src="../images/ellavball.png" height="300" alt="Volleyball picture">
         <img src="../images/vballparents.png" height="300" alt="Volleyball">
     </div>
     <br>
